--- a/css/layout.css
+++ b/css/layout.css
@@ -8,3 +8,12 @@
     width: 100%;
     height: auto;
 }
+
+@media screen and (min-width: 600px){
+    .grid_1-1 {
+        display: grid;
+        grid-template-columns: 1fr 1fr ;
+        gap: 1em;
+      }
+    
+}
