--- a/css/layout.css
+++ b/css/layout.css
@@ -4,10 +4,21 @@
     gap: 1em;
   }
 
-  img{
+.grid_1-1{
+display: grid;
+grid-template-columns: 1fr 1fr ;
+gap: 1em;
+}
+
+img{
     width: 100%;
     height: auto;
 }
+
+.ommig{
+    text-align: right;
+}
+
 
 @media screen and (min-width: 600px){
     .grid_1-2 {
