--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,12 @@ margin-top: 30px;
     font-size: 60px;
 }
 
+.boks{
+    background-color:rgb(190, 30, 45) ;
+    border-radius: 2%;
+    margin: 20px;
+    padding: 10px;
+}  
 /* når skærmen er mindre en 450pixels, ændre font-size og positionen på luk kanppen så de ikke over lapper */
 @media screen  and (max-width: 450px){
     .overlay a{font-size: 20px;}
@@ -101,11 +107,6 @@ main{padding: 0% 5% 5% 5%;}
     main{padding: 0% 5% 5% 5%;}
     #compuer{display: block;}
     #mobil{ display: none;}
-  .boks{
-    background-color:rgb(190, 30, 45) ;
-    border-radius: 2%;
-    margin: 20%;
-    padding: 10%;
-}  
+  
 }
 
