--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body{
 header{
     padding: 2% 5% 2% 5%;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: larger;
     color: rgb(190, 30, 45);
 }
 span:hover{
@@ -32,6 +33,9 @@ p{
 line-height: 1.5em;
 }
 
+.baggrund{
+    background-color: aquamarine;
+}
 .overlay{
     height: 100%;
     width: 0;
