--- a/css/layout.css
+++ b/css/layout.css
@@ -29,9 +29,9 @@ img{
       .grid_1-1{
         display: grid;
         grid-template-columns: 1fr 1fr ;
-        gap: 1em;
+        gap: 3em;
         }
-        .temaopgave{
+        /* .temaopgave{
           margin: 0% 25% 0% 25%;
-        }
+        } */
 }
