--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,14 @@
+@font-face {
+    font-family: plantagente;
+    src: url(../font/Plantagenet\ Cherokee.ttf);
+  }
 body{
     background-color: rgb(246, 234, 219);
     margin: 0;
 }
 header{
     padding: 2% 5% 2% 5%;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: plantagente;
     font-size: larger;
     color: rgb(190, 30, 45);
 }
@@ -21,18 +25,20 @@ a:hover{
 footer{
     text-align: center;
     color: rgb(190, 30, 45);
-    font-family:Arial, Helvetica, sans-serif;
+    font-family:plantagente;
 }
 
 h1{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: plantagente;
     color: rgb(190, 30, 45);
     text-align: center;
     font-size: 36px;
+    text-shadow: 2px 2px rgb(26, 62, 83);
 }
 p{
     font-size: 18px;
 line-height: 1.5em;
+max-width: 65ch;
 }
 
 .felx{
@@ -48,20 +54,34 @@ line-height: 1.5em;
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
-    padding: 10px;
+    padding: 15px;
 }  
 .baggrund{
-    background-color: rgb(190, 30, 45, 0.2);
-     padding: 1% 5% 2% 5%;
+    background-color: rgb(190, 30, 45, 0.1);
+     padding: 1% 8% 2% 8%;
 }
 .baggrund1{
-    padding: 1% 5% 2% 5%;
+    padding: 1% 8% 2% 8%;
 }
-
+.website{
+    text-decoration: none;
+    background-color: antiquewhite;
+    padding: 2%;
+    border-radius: 8px;
+  color: rgb(190, 30, 45);
+ font-size: xx-large;
+ font-family: plantagente;
+}
 /* .baggrund{
     background-color: aquamarine;
 } */
+.arrow{ border: solid rgb(190, 30, 45);
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 5px;
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);}
+
 .overlay{
     height: 100%;
     width: 0;
@@ -119,7 +139,7 @@ margin-top: 30px;
     padding: 10px;
 }   */
 /* når skærmen er mindre en 450pixels, ændre font-size og positionen på luk kanppen så de ikke over lapper */
-@media screen  and (max-width: 450px){
+@media screen and (max-width: 450px){
     .overlay a{font-size: 20px;}
     .overlay .closebtn{
         font-size: 40px;
@@ -129,8 +149,7 @@ margin-top: 30px;
 /* main{padding: 0% 5% 5% 5%;} */
 #mobil{display: block;}
 #computer{display: none;}
-
-
+.ommig{text-align: right;}
 }
 
 @media screen and (min-width: 451px){
@@ -138,5 +157,10 @@ margin-top: 30px;
     #compuer{display: block;}
     #mobil{ display: none;}
   
+        .ommig{ text-align: right;}
+}
+
+@media screen and (min-width: 1500px){
+  p{font-size: 30px;}  
 }
 
