--- a/css/style.css
+++ b/css/style.css
@@ -7,21 +7,22 @@ body{
     margin: 0;
 }
 header{
-    padding: 2% 5% 2% 5%;
+    padding: 2% 10% 0% 10%;
     font-family: plantagente;
-    font-size: larger;
+    font-size: x-large;
     color: rgb(190, 30, 45);
 }
 span:hover{
-    color: rgb(26, 62, 83); 
+    color: rgb(57, 73, 157); 
 }
 header a{
     text-decoration: none;
     color: rgb(190, 30, 45);
 }
 a:hover{
-    color: rgb(26, 62, 83); 
+    color: rgb(57, 73, 157); 
 }
+
 footer{
     text-align: center;
     color: rgb(190, 30, 45);
@@ -30,10 +31,10 @@ footer{
 
 h1{
     font-family: plantagente;
-    color: rgb(190, 30, 45);
+    color: rgb(57, 73, 157);
     text-align: center;
-    font-size: 36px;
-    text-shadow: 2px 2px rgb(26, 62, 83);
+    font-size: 40px;
+    /* text-shadow: 2px 2px rgb(57, 73, 157); */
 }
 p{
     font-size: 18px;
@@ -82,6 +83,13 @@ text-align: center;
     padding: 5px;
     transform: rotate(-45deg);
     -webkit-transform: rotate(-45deg);}
+
+ ul.icon {
+    list-style-image: url('../img/icon.webp');
+    }
+
+.logo{ padding: 0% 20% 0% 20%;}
+
 
 .overlay{
     height: 100%;
