--- a/css/layout.css
+++ b/css/layout.css
@@ -33,4 +33,7 @@ img{
         /* .temaopgave{
           margin: 0% 25% 0% 25%;
         } */
+        
 }
+/* @media screen and (max-width: 600px){.grid_1-1-1{ display: grid;
+          /* grid-template-columns: 1fr ;}}  det fucker med footer */
