--- a/css/style.css
+++ b/css/style.css
@@ -63,10 +63,10 @@ max-width: 65ch;
 }    */
 .baggrund{
     background-color: rgb(190, 30, 45, 0.1);
-     padding: 1% 8% 2% 8%;
+     padding: 1% 10% 2% 10%;
 }
 .baggrund1{
-    padding: 1% 8% 2% 8%;
+    padding: 1% 10% 2% 10%;
 }
 .website{
     text-decoration: none;
@@ -104,7 +104,7 @@ text-align: center;
     left: 0;
     right: 0;
     /* background-color: rgb(227, 207, 225); */
-    background-color: rgb(227, 207, 225, 0.9);
+    background-color: rgb(247, 241, 234);
     /* så den bliver inde for skærmen */
     overflow: hidden;
     /* slide ned effekt. transition */
@@ -125,7 +125,7 @@ margin-top: 30px;
     padding: 8px;
     text-decoration: none;
     font-size: 36px;
-    color: rgb(255, 81, 37);
+    color: rgb(190, 30, 45);
     display: block;
     /* transsition effekt med hover */
     transition: 0.3s;
@@ -133,7 +133,7 @@ margin-top: 30px;
 
 /* hover effekt på navigations link */
 .overlay a:hover, .overlay a:focus {
-    color: rgb(246, 51, 191);
+    color: rgb(57, 73, 157);
 }
 
 /* position til luk knappen */
