--- a/css/layout.css
+++ b/css/layout.css
@@ -15,7 +15,7 @@ img{
 }
 
 
-@media screen and (min-width: 600px){
+@media (min-width: 600px){
     .grid_1-2 {
         display: grid;
         grid-template-columns: 1fr 2fr ;
