--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ h1{
 }
 p{
     font-size: 16px;
-line-height: 1.5em;
+line-height: 1.7em;
 max-width: 65ch;
 }
 
@@ -69,11 +69,11 @@ max-width: 65ch;
     padding: 1% 10% 2% 10%;
 }
 
-.baggrund2{padding: 1% 25% 2% 25%;}
+.baggrund2{padding: 1% 23% 2% 23%;}
 
-.baggrund2 p{font-size: 16px;
-line-height: 1.5em;
-max-width: 75ch;}
+.baggrund2 p{max-width: 80ch;
+    font-size: 16px;
+}
 
 .website{
     text-decoration: none;
@@ -160,7 +160,7 @@ margin-top: 30px;
     padding: 10px;
 }   */
 /* når skærmen er mindre en 450pixels, ændre font-size og positionen på luk kanppen så de ikke over lapper */
-@media screen and (max-width: 450px){
+@media (max-width: 450px){
     .overlay a{font-size: 20px;}
     .overlay .closebtn{
         font-size: 40px;
@@ -177,7 +177,7 @@ header{font-size: larger;}
 }
 
 
-@media screen and (min-width: 451px){
+@media (min-width: 451px){
     /* main{padding: 0% 5% 5% 5%;} */
     #compuer{display: block;}
     #mobil{ display: none;}
@@ -186,7 +186,8 @@ header{font-size: larger;}
   
 }
 
-@media screen and (min-width: 1500px){
+@media (min-width: 1500px){
   p{font-size: 30px;}  
 }
+
 
