--- a/css/style.css
+++ b/css/style.css
@@ -38,8 +38,13 @@ h1{
     color: rgb(57, 73, 157);
     text-align: center;
     font-size: 40px;
+    margin-bottom: 0;
     /* text-shadow: 2px 2px rgb(57, 73, 157); */
 }
+h2{font-family: plantagente;
+    font-size: 34px;
+}
+h3{font-family: plantagente; font-size: 26px;}
 p{
     font-size: 16px;
 line-height: 1.7em;
@@ -69,7 +74,7 @@ max-width: 65ch;
     padding: 1% 10% 2% 10%;
 }
 
-.baggrund2{padding: 1% 23% 2% 23%;}
+.baggrund2{padding: 0% 23% 2% 23%;}
 
 .baggrund2 p{max-width: 80ch;
     font-size: 16px;
