--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body{
     margin: 0;
     padding-top: 6%;
 }
+.body{padding: 0%;}
 
 header{
     position: fixed;
@@ -74,6 +75,9 @@ margin-top: 30px;
     font-size: 60px;
 }
 
+nav ul{list-style: none;
+padding-left: 0;}
+
 span:hover{
     color: rgb(57, 73, 157); 
 }
@@ -86,7 +90,7 @@ a:hover{
 .logo{padding: 0% 25% 0% 25%;}
 
 .ommig{text-align: right;}
-.ommigindex{margin: 0% 0% 0% 1000%;}
+.ommigindex{margin: 0% 0% 0% 0%;}
 
 .baggrund{
     background-color: rgb(190, 30, 45, 0.1);
@@ -103,8 +107,8 @@ a:hover{
     font-size: 18px;
 }
 
-.container{margin: -7% 8% 0% 8%;}
-.container1{margin: 5% 2% 0% 2%;}
+.container{margin: 0% 8% 0% 8%;}
+.container1{margin: 5% 2% 2% 2%;}
 
 h1{
     font-family: plantagente;
