--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@ h2{font-family: plantagente;
     font-size: 34px;
 }
 
-h3{font-family: plantagente; font-size: 26px; text-align: center;}
+h3{font-family: plantagente; font-size: 26px;}
 
 p{
     font-size: 18px;
@@ -179,6 +179,7 @@ footer{
 
 header{font-size: larger;}
 .baggrund2{ padding: 1% 2% 2% 2%;}
+h3{font-size: 20px;}
 }
 
 @media (min-width: 800px){
@@ -191,6 +192,7 @@ header{font-size: larger;}
   p{font-size: 28px;}  
   ul li{font-size: x-large;}
   .baggrund2 p{font-size: 28px;}
+  h3{font-size: 30px;}
 }
 
 
