--- a/css/style.css
+++ b/css/style.css
@@ -125,8 +125,9 @@ h2{font-family: plantagente;
     font-size: 34px;
 }
 
-h3{font-family: plantagente; font-size: 26px;}
+h3{font-family: plantagente; font-size: 26px; text-align: center ;}
 
+h4{font-family: plantagente; font-size: 22px;}
 p{
     font-size: 18px;
 line-height: 1.7em;
@@ -187,10 +188,13 @@ h3{font-size: 20px;}
 }
 
 @media (min-width: 1500px){
-  p{font-size: 28px;}  
+  p{font-size: 26px;}  
   ul li{font-size: x-large;}
   .baggrund2 p{font-size: 28px;}
-  h3{font-size: 30px;}
+  h1{font-size: 50px;}
+  h2{font-size: 40px;}
+  h3{font-size: 34px;}
+  h4{font-size: 30px;}
 }
 
 
