--- a/css/style.css
+++ b/css/style.css
@@ -58,8 +58,6 @@ margin-top: 30px;
     font-size: 32px;
     color: rgb(190, 30, 45);
     display: block;
-    /* transsition effekt med hover */
-    transition: 0.3s;
 }
 
 /* hover effekt på navigations link */
@@ -195,6 +193,7 @@ h3{font-size: 20px;}
   h2{font-size: 40px;}
   h3{font-size: 34px;}
   h4{font-size: 30px;}
+  header{font-size: xx-large;}
 }
 
 
