--- a/css/layout.css
+++ b/css/layout.css
@@ -16,11 +16,13 @@ img{
     display: grid;
     grid-template-columns: 1fr 2fr ;
     gap: 3em;
+    margin: 4% 0% 2% 0%;
     }
       .grid_1-1{
         display: grid;
         grid-template-columns: 1fr 1fr ;
         gap: 3em;
+        margin-top: 1%;
         }
         .grid_1-1-1 {
           display: grid;
